cabal-version:      >= 1.10
name:               parser
version:            0.1.0.0
description:         An educational implementation of parser combinators in Haskell.
license:            MIT
build-type:         Simple

library
    -- Specify all modules that make up the core logic
    exposed-modules:    HParser,
                        HParser.Declarations,
                        HParser.InputState,
                        HParser.Parsers,
                        HParser.Combinators
    hs-source-dirs:     src
    build-depends:      base >= 4.17 && < 5
    default-language:   Haskell2010
    default-extensions: FlexibleInstances
executable parser-example
    -- The executable uses the main example file
    main-is:            main.hs
    hs-source-dirs:     examples
    build-depends:      base >= 4.17 && < 5,
                        parser
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    default-language:   Haskell2010

test-suite parser-test
    -- The test suite points to the test implementation
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    build-depends:      base >= 4.17 && < 5,
                        hspec,
                        parser
    default-language:   Haskell2010
